fixing some core layout issues and working on the small display issues

--- a/sites/all/themes/lapcat/960_24_col.css
+++ b/sites/all/themes/lapcat/960_24_col.css
@@ -128,7 +128,7 @@ body {
 }
 
 .container_24 .grid_8 {
-  width: 310px;
+  width: 305px;
 }
 
 .container_24 .grid_9 {
@@ -144,7 +144,7 @@ body {
 }
 
 .container_24 .grid_12 {
-  width: 470px;
+  width: 465px;
 }
 
 .container_24 .grid_13 {
@@ -160,7 +160,7 @@ body {
 }
 
 .container_24 .grid_16 {
-  width: 630px;
+  width: 625px;
 }
 
 .container_24 .grid_17 {
