--- a/sites/all/themes/lapcat/less/colors.less
+++ b/sites/all/themes/lapcat/less/colors.less
@@ -141,7 +141,7 @@
   .Animate(300ms);
   &:hover{
     border-bottom:          none;
-    box-shadow:             inset 0 0 1.1em 2px @highLightColor;
+    box-shadow:             inset 0 0 .8em 3px @highLightColor;
   }
   .rounded-corners(3px);
   a{
