--- a/sites/all/themes/lapcat/less/mediaQueries.less
+++ b/sites/all/themes/lapcat/less/mediaQueries.less
@@ -131,12 +131,13 @@
     overflow:visible;
     margin-bottom:3.46rem;
     input,select{
-          .lp-Buttons(2.6em);
+      line-height:2em;
+      height:2.3em;
     }
     .spc-Search{
-      top:10em;
-      right:25%;
-      width:50%;
+      top:9em;
+      right:5%;
+      width:90%;
       background:rgba(0,0,0,0);
       box-shadow: inset 0 0 1px 1px rgba(0,0,0,0);
       input[type=search]{
@@ -146,15 +147,24 @@
         width:100%;
       }
       .spc-Submit{
-        input[type="submit"]{
-          .lp-Buttons(2.6em);
+        width:5em;
+        input{
+          margin:0 0 0 40%  ;
+          width:4em;
         }
       }
     }
   }
-
+  /*
+  .adultResearch{
+    img{
+      float:left;
+    }
+    div:not(.subTitleElement){width:100%;display:block;min-height:10em;}
+  }
+  */
 }
-@media only screen and (min-width:1.5em){ /*everything should be here*/
+@media only screen and (min-width:.5em){ /*everything should be here*/
   .mainCatalogSearch{
     display:none;
   }
