--- a/sites/all/themes/lapcat/less/mq.css
+++ b/sites/all/themes/lapcat/less/mq.css
@@ -161,42 +161,14 @@
 
   .supPageHeader input,
   .supPageHeader select {
-    height: 2.6em;
-    width: auto;
-    margin: 2.5px 0 2.5px 0;
-    background: #f1f1f1;
-    position: relative;
-    vertical-align: middle;
-    box-shadow: inset 0 0 1px 1px rgba(36,36,36,0.3);
-    line-height: 2.6em;
-    overflow: hidden;
-    text-align: center;
-    font-size: 1.1818181818181817em;
-    cursor: pointer;
-    font-weight: normal;
-    -webkit-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-    border-radius: 3px;
-  }
-
-  .supPageHeader input:hover,
-  .supPageHeader select:hover {
-    border-bottom: none;
-    box-shadow: inset 0 0 1.1em 2px #5f3e12;
-  }
-
-  .supPageHeader input a,
-  .supPageHeader select a {
-    width: 100%;
-    display: block;
-    font-size: 1.1818181818181817em;
+    line-height: 2em;
+    height: 2.3em;
   }
 
   .supPageHeader .spc-Search {
-    top: 10em;
-    right: 25%;
-    width: 50%;
+    top: 9em;
+    right: 5%;
+    width: 90%;
     background: rgba(0,0,0,0);
     box-shadow: inset 0 0 1px 1px rgba(0,0,0,0);
   }
@@ -209,39 +181,17 @@
     width: 100%;
   }
 
-  .supPageHeader .spc-Search .spc-Submit input[type="submit"] {
-    height: 2.6em;
-    width: auto;
-    margin: 2.5px 0 2.5px 0;
-    background: #f1f1f1;
-    position: relative;
-    vertical-align: middle;
-    box-shadow: inset 0 0 1px 1px rgba(36,36,36,0.3);
-    line-height: 2.6em;
-    overflow: hidden;
-    text-align: center;
-    font-size: 1.1818181818181817em;
-    cursor: pointer;
-    font-weight: normal;
-    -webkit-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-    border-radius: 3px;
+  .supPageHeader .spc-Search .spc-Submit {
+    width: 5em;
   }
 
-  .supPageHeader .spc-Search .spc-Submit input[type="submit"]:hover {
-    border-bottom: none;
-    box-shadow: inset 0 0 1.1em 2px #5f3e12;
-  }
-
-  .supPageHeader .spc-Search .spc-Submit input[type="submit"] a {
-    width: 100%;
-    display: block;
-    font-size: 1.1818181818181817em;
+  .supPageHeader .spc-Search .spc-Submit input {
+    margin: 0 0 0 40%;
+    width: 4em;
   }
 }
 
-@media only screen and (min-width:1.5em) {
+@media only screen and (min-width:.5em) {
   .mainCatalogSearch {
     display: none;
   }
